user+pets and in swagger
